Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-16187

FreeBASIC 1.06.0 from rapps, cmd text output slightly flashes (the screen is filled with black color)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Trivial
    • 0.4.14
    • None
    • None

    Description

      A follow-up-ticket of CORE-16177 (that covers the non-regressional flashing)

      0.4.13-dev-624-gb5478a7 gcc dbg lin is affected
      0.4.13-dev-624-gb5478a7 gcc dbg win is affected is affected as well
      ...
      0.4.10-dev-55-g7af3969 gcc dbg lin is affected as well

      Reproduction steps

      • install FreeBASIC 1.06.0 from rapps
      • run "open [Freebasic] console" from startmenu
      • type "fbc" at the prompt and hit enter
      • the app will start to write some help text on the screen

      Expected result
      The text output should not flash black for fractions of a second, like 2k3sp2

      Observed result
      0.4.13-dev-624-gb5478a7 flashes like that movie (our txt-rendering is fast here, so it's very subtle atm)
      0.4.13-dev-623-g019e3ff flashes like that movie (our txt-rendering is slow here, so the black flashing is visible very good)

      Attachments

        Issue Links

          Activity

            People

              katayama_hirofumi_mz Katayama Hirofumi MZ
              reactosfanboy reactosfanboy
              Votes:
              3 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: