[CONSRV] Speed up console txt output CORE-16187

By demoting good-path DPRINT1 to DPRINT.
HBelusca agreed.

The more important commit to solve CORE-16187 has
been done beforehand in 0.4.14-dev-553-g
1dcdb4c2d0298ee71822c1d432a30604a82bbd21